Esta rama y este commit tienen agregado JavaScript

--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ header{
     font-size: 35px;
     z-index: 101; /*para que este sobre el heder*/
     cursor: pointer; /* para que  aparezca la manito cuando ponemos el mouse encima*/
-}
+    display: none;
+} 
 
 #menu-toggle{
     display: none;/*nunca quiero que se vea el chekbox*/
@@ -246,8 +247,8 @@ section{
         display: block;
         margin: 7px 0;
     }
-    #menu-toggle:checked + label.menu-icon-action + ul{
+    
+    .navlist.open{
         right: 0;
     }
-
 }
